--- a/source/asset/js_sources_bookmark.html
+++ b/source/asset/js_sources_bookmark.html
@@ -54,7 +54,7 @@
               <DT><A HREF="https://www.codecademy.com/">Codecademy</A>
               <DT><A HREF="https://www.leveluptutorials.com/">Level Up Tutorials</A>
               <DT><A HREF="https://designcode.io/">Design+Code</A>
-              <DT><A HREF="https://www.udemy.com/)">Udemy</A>
+              <DT><A HREF="https://www.udemy.com/">Udemy</A>
               <DT><A HREF="https://egghead.io/">Egghead.io</A>
               <DT><A HREF="https://frontendmasters.com/">Frontend Masters</A>
               <DT><A HREF="https://youtube.com">YouTube</A>
@@ -67,7 +67,7 @@
               <DT><A HREF="https://www.udacity.com/">Udacity</A>
               <DT><A HREF="https://kentcdodds.com/blog/">Kent C. Dodds</A>
               <DT><A HREF="https://testingjavascript.com/">Testing JavaScript</A>
-              <DT><A HREF="https://www.lynda.com/)">Lynda</A>
+              <DT><A HREF="https://www.lynda.com/">Lynda</A>
               <DT><A HREF="academind">Academind</A>
               <DT><A HREF="https://www.linkedin.com/learning/">LinkedIn Learning</A>
               <DT><A HREF="https://teamtreehouse.com/">Treehouse</A>
