--- a/source/asset/sitemap.html
+++ b/source/asset/sitemap.html
@@ -13,7 +13,7 @@ ul, li{margin:0px; padding:0px; list-style:none;}ul{width:800px;margin-left: aut
 
 <li class="lks">2、<a href="https://www.scarsu.com/dive_into_regular_expression" title="正则自检清单" target="_blank">正则自检清单</a></li>
 
-<li class="lks">3、<a href="https://www.scarsu.com/categories/lang" title="13 外语" target="_blank">13 外语</a></li>
+<li class="lks">3、<a href="https://www.scarsu.com/categories/lang" title="05外语" target="_blank">05外语</a></li>
 
 <li class="lks">4、<a href="https://www.scarsu.com/apps" title="🔨Apps" target="_blank">🔨Apps</a></li>
 
@@ -23,23 +23,23 @@ ul, li{margin:0px; padding:0px; list-style:none;}ul{width:800px;margin-left: aut
 
 <li class="lks">7、<a href="https://www.scarsu.com/fed_ml_14_slider" title="ML14 声控轮播图 - 语音识别迁移学习" target="_blank">ML14 声控轮播图 - 语音识别迁移学习</a></li>
 
-<li class="lks">8、<a href="https://www.scarsu.com/categories/build-tools" title="07 构建工具" target="_blank">07 构建工具</a></li>
+<li class="lks">8、<a href="https://www.scarsu.com/categories/build-tools" title="10技术 | 前端工具与工程化" target="_blank">10技术 | 前端工具与工程化</a></li>
 
 <li class="lks">9、<a href="https://www.scarsu.com/how_to_learn_wheels_source_code" title="如何学习源码 | 如何高效学习一个新知识" target="_blank">如何学习源码 | 如何高效学习一个新知识</a></li>
 
-<li class="lks">10、<a href="https://www.scarsu.com/categories/utility-libraries" title="08 工具库" target="_blank">08 工具库</a></li>
+<li class="lks">10、<a href="https://www.scarsu.com/categories/utility-libraries" title="10技术 | 前端工具与工程化" target="_blank">10技术 | 前端工具与工程化</a></li>
 
 <li class="lks">11、<a href="https://www.scarsu.com/event_loop" title="【Javascript Event Loop &amp; 异步机制】总结" target="_blank">【Javascript Event Loop &amp; 异步机制】总结</a></li>
 
-<li class="lks">12、<a href="https://www.scarsu.com/categories/learn" title="09 一些高效的学习方法" target="_blank">09 一些高效的学习方法</a></li>
+<li class="lks">12、<a href="https://www.scarsu.com/categories/learn" title="03方法论 | 高效学习" target="_blank">03方法论 | 高效学习</a></li>
 
 <li class="lks">13、<a href="https://www.scarsu.com/vue-message-plugin" title="Vue消息插件开发 &amp; npm发布" target="_blank">Vue消息插件开发 &amp; npm发布</a></li>
 
-<li class="lks">14、<a href="https://www.scarsu.com/categories/ScarSu" title="00 ScarSu|关于我和这个博客" target="_blank">00 ScarSu|关于我和这个博客</a></li>
+<li class="lks">14、<a href="https://www.scarsu.com/categories/ScarSu" title="01关于 | 此博客的来世今生" target="_blank">01关于 | 此博客的来世今生</a></li>
 
 <li class="lks">15、<a href="https://www.scarsu.com/fed_ml_09_under&amp;overfitting" title="ML09 欠拟合&amp;过拟合" target="_blank">ML09 欠拟合&amp;过拟合</a></li>
 
-<li class="lks">16、<a href="https://www.scarsu.com/categories/javascript" title="06 JavaScript" target="_blank">06 JavaScript</a></li>
+<li class="lks">16、<a href="https://www.scarsu.com/categories/javascript" title="10技术 | JavaScript" target="_blank">10技术 | JavaScript</a></li>
 
 <li class="lks">17、<a href="https://www.scarsu.com/" title="ScarSu" target="_blank">ScarSu</a></li>
 
@@ -55,9 +55,9 @@ ul, li{margin:0px; padding:0px; list-style:none;}ul{width:800px;margin-left: aut
 
 <li class="lks">23、<a href="https://www.scarsu.com/fed_ml_15_py_model" title="ML15 Python与Js模型互转" target="_blank">ML15 Python与Js模型互转</a></li>
 
-<li class="lks">24、<a href="https://www.scarsu.com/categories/02-Debug-Devtools进阶系列" title="02 Debug|Devtools进阶系列" target="_blank">02 Debug|Devtools进阶系列</a></li>
+<li class="lks">24、<a href="https://www.scarsu.com/categories/02-Debug-Devtools进阶系列" title="10技术 | 前端Debug老司机" target="_blank">10技术 | 前端Debug老司机</a></li>
 
-<li class="lks">25、<a href="https://www.scarsu.com/categories/tools" title="11 工具|一些提高效率的工具" target="_blank">11 工具|一些提高效率的工具</a></li>
+<li class="lks">25、<a href="https://www.scarsu.com/categories/tools" title="04工具 | 效率MAX" target="_blank">04工具 | 效率MAX</a></li>
 
 <li class="lks">26、<a href="https://www.scarsu.com/archives" title="📪全部文章(65)" target="_blank">📪全部文章(65)</a></li>
 
@@ -69,11 +69,11 @@ ul, li{margin:0px; padding:0px; list-style:none;}ul{width:800px;margin-left: aut
 
 <li class="lks">30、<a href="https://www.scarsu.com/page/4" title="4" target="_blank">4</a></li>
 
-<li class="lks">31、<a href="https://www.scarsu.com/categories/database" title="10 数据库" target="_blank">10 数据库</a></li>
+<li class="lks">31、<a href="https://www.scarsu.com/categories/database" title="10技术 | 数据库" target="_blank">10技术 | 数据库</a></li>
 
 <li class="lks">32、<a href="https://www.scarsu.com/vue_store_and_vuex" title="Vue状态管理 &amp; Vuex总结" target="_blank">Vue状态管理 &amp; Vuex总结</a></li>
 
-<li class="lks">33、<a href="https://www.scarsu.com/categories/html" title="04 HTML" target="_blank">04 HTML</a></li>
+<li class="lks">33、<a href="https://www.scarsu.com/categories/html" title="10技术 | HTML" target="_blank">10技术 | HTML</a></li>
 
 <li class="lks">34、<a href="https://www.scarsu.com/page/2" title="2" target="_blank">2</a></li>
 
@@ -85,15 +85,15 @@ ul, li{margin:0px; padding:0px; list-style:none;}ul{width:800px;margin-left: aut
 
 <li class="lks">38、<a href="https://www.scarsu.com/rich_dad" title="《富爸爸穷爸爸》：为什么你很穷" target="_blank">《富爸爸穷爸爸》：为什么你很穷</a></li>
 
-<li class="lks">39、<a href="https://www.scarsu.com/categories/ml" title="03 TensorFlow|机器学习系列" target="_blank">03 TensorFlow|机器学习系列</a></li>
+<li class="lks">39、<a href="https://www.scarsu.com/categories/ml" title="10技术 | 前端机器学习" target="_blank">10技术 | 前端机器学习</a></li>
 
-<li class="lks">40、<a href="https://www.scarsu.com/categories/css" title="05 CSS" target="_blank">05 CSS</a></li>
+<li class="lks">40、<a href="https://www.scarsu.com/categories/css" title="10技术 | CSS" target="_blank">10技术 | CSS</a></li>
 
 <li class="lks">41、<a href="https://www.scarsu.com/fed_ml_11_pre_training_model" title="ML11 使用预训练模型 图片分类" target="_blank">ML11 使用预训练模型 图片分类</a></li>
 
 <li class="lks">42、<a href="https://www.scarsu.com/fed_ml_12_transfer_learning" title="ML12 基于迁移学习的图片分类-商标识别" target="_blank">ML12 基于迁移学习的图片分类-商标识别</a></li>
 
-<li class="lks">43、<a href="https://www.scarsu.com/categories/read" title="01 课外输入|我读过的书们" target="_blank">01 课外输入|我读过的书们</a></li>
+<li class="lks">43、<a href="https://www.scarsu.com/categories/read" title="02阅读 | 我的课外书笔记" target="_blank">02阅读 | 我的课外书笔记</a></li>
 
 <li class="lks">44、<a href="https://www.scarsu.com/nonviolent_communication" title="《非暴力沟通》：有些话真的可以好好说" target="_blank">《非暴力沟通》：有些话真的可以好好说</a></li>
 
