--- a/source/friends/index.html
+++ b/source/friends/index.html
@@ -56,6 +56,15 @@
       .card-list .card .name {
         margin: 0;
       }
+      body.dark-theme .card-list .card{
+        background-color:#292a2d;
+      }
+      body.dark-theme .card-list .card img{
+        background-color: #fff;
+      }
+      body.dark-theme .card-list .card .name{
+        color:#dddde8;
+      }
     </style>
   </head>
   <body>
