add friend link

--- a/source/friends/index.html
+++ b/source/friends/index.html
@@ -125,6 +125,17 @@
         </div>
       </a>
 
+      <a class="card" href="https://alili.tech">
+        <img
+          class="avatar nofancybox"
+          src="https://alili.tech/images/logo.png"
+        />
+        <div>
+          <p class="name">Alili丶前端大爆炸</p>
+          <p class="desc">一个前端技术博客,持续学习,持续写博客. 关于此生理想、近期计划、今日功课。</p>
+        </div>
+      </a>
+
       
       <!-- <a class="card" href="">
         <img
