--- a/source/friends/index.html
+++ b/source/friends/index.html
@@ -65,6 +65,9 @@
       body.dark-theme .card-list .card .name{
         color:#dddde8;
       }
+      body.dark-theme .card-list .card .desc{
+        color:#dddde8;
+      }
     </style>
   </head>
   <body>
