fix layout style buf

--- a/source/friends/index.html
+++ b/source/friends/index.html
@@ -13,8 +13,6 @@
       }
       .card-list .card {
         display: flex;
-        flex-direction: column;
-        display: flex;
         flex-direction: row;
         width: 48%;
         min-height: 100px;
@@ -22,7 +20,8 @@
         transition: all 0.4s;
         border-radius: 5px;
         border:1px solid #ddd;
-        margin:10px 0;
+        flex: 1 0 280px;
+        margin: 10px 10px;
       }
       .card-list .card:hover {
         box-shadow: 8px 4px 20px 0px rgba(0, 0, 0, 0.15);
@@ -138,6 +137,17 @@
           <p class="desc">一个前端技术博客,持续学习,持续写博客. 关于此生理想、近期计划、今日功课。</p>
         </div>
       </a>
+      
+      <!-- <a class="card" href="https://mtc.nofwl.com/">
+        <img
+          class="avatar nofancybox"
+          src="https://mtc.nofwl.com/logo.webp"
+        />
+        <div>
+          <p class="name">lencx</p>
+          <p class="desc">My tools & config, and awesome lists.</p>
+        </div>
+      </a> -->
 
       
       <!-- <a class="card" href="">
