--- a/source/friends/index.html
+++ b/source/friends/index.html
@@ -138,16 +138,17 @@
         </div>
       </a>
       
-      <!-- <a class="card" href="https://mtc.nofwl.com/">
+      <a class="card" href="https://nofwl.com">
         <img
           class="avatar nofancybox"
-          src="https://mtc.nofwl.com/logo.webp"
+          src="https://static.nofwl.com/lencx.png"
         />
         <div>
-          <p class="name">lencx</p>
-          <p class="desc">My tools & config, and awesome lists.</p>
+          <p class="name">lencx的博客</p>
+          <p class="desc">一个自学前端的笔记，思考。折腾过，迷茫过，在路上...</p>
         </div>
-      </a> -->
+      </a>
+
 
       
       <!-- <a class="card" href="">
