--- a/source/friends/index.html
+++ b/source/friends/index.html
@@ -149,6 +149,17 @@
         </div>
       </a>
 
+      <a class="card" href="https://wangxitong.github.io/">
+        <img
+          class="avatar nofancybox"
+          src="https://wangxitong.github.io/img/avatar.jpeg"
+        />
+        <div>
+          <p class="name">Daniel Wang</p>
+          <p class="desc">溺死在前端的浑水里。。。</p>
+        </div>
+      </a>
+
 
       
       <!-- <a class="card" href="">
