--- a/source/friends/index.html
+++ b/source/friends/index.html
@@ -145,7 +145,7 @@
         />
         <div>
           <p class="name">lencx的博客</p>
-          <p class="desc">一个自学前端的笔记，思考。折腾过，迷茫过，在路上...</p>
+          <p class="desc">🤔 ⦗折腾 ⇌ 迷茫 ⇌ 思考⦘ing，在路上...</p>
         </div>
       </a>
 
@@ -178,7 +178,7 @@
       <h2>添加友链</h2>
       <p>用任何方式联系上我都可以~</p>
       <p>我的友链信息👇</p>
-      <pre>
+      <pre style="overflow-x: auto;">
 博客名称：ScarSu的博客
 博客网址：https://www.scarsu.com
 博客头像：https://scarsu.oss-cn-shanghai.aliyuncs.com/picgo20201012144739.jpg
