--- a/source/friends/index.html
+++ b/source/friends/index.html
@@ -145,7 +145,7 @@
         />
         <div>
           <p class="name">lencx的博客</p>
-          <p class="desc">🤔 ⦗折腾 ⇌ 迷茫 ⇌ 思考⦘ing，在路上...</p>
+          <p class="desc">{折腾 ⇌ 迷茫 ⇌ 思考]ing，在路上...</p>
         </div>
       </a>
 
