--- a/source/asset/sitemap.html
+++ b/source/asset/sitemap.html
@@ -35,7 +35,7 @@ ul, li{margin:0px; padding:0px; list-style:none;}ul{width:800px;margin-left: aut
 
 <li class="lks">13、<a href="https://www.scarsu.com/vue-message-plugin" title="Vue消息插件开发 &amp; npm发布" target="_blank">Vue消息插件开发 &amp; npm发布</a></li>
 
-<li class="lks">14、<a href="https://www.scarsu.com/categories/ScarSu" title="01关于 | 此博客的来世今生" target="_blank">01关于 | 此博客的来世今生</a></li>
+<li class="lks">14、<a href="https://www.scarsu.com/categories/ScarSu" title="01关于" target="_blank">01关于</a></li>
 
 <li class="lks">15、<a href="https://www.scarsu.com/fed_ml_09_under&amp;overfitting" title="ML09 欠拟合&amp;过拟合" target="_blank">ML09 欠拟合&amp;过拟合</a></li>
 
