--- a/source/friends/index.html
+++ b/source/friends/index.html
@@ -159,6 +159,17 @@
           <p class="desc">溺死在前端的浑水里。。。</p>
         </div>
       </a>
+      
+      <a class="card" href="https://crazymryan.github.io/blog">
+        <img
+          class="avatar nofancybox"
+          src="https://crazymryan.github.io/blog/favicon.ico"
+        />
+        <div>
+          <p class="name">悲伤日记</p>
+          <p class="desc">一个不太懂前端的前端猿人</p>
+        </div>
+      </a>
 
 
       
