--- a/source/asset/sitemap.html
+++ b/source/asset/sitemap.html
@@ -31,7 +31,7 @@ ul, li{margin:0px; padding:0px; list-style:none;}ul{width:800px;margin-left: aut
 
 <li class="lks">11、<a href="https://www.scarsu.com/event_loop" title="【Javascript Event Loop &amp; 异步机制】总结" target="_blank">【Javascript Event Loop &amp; 异步机制】总结</a></li>
 
-<li class="lks">12、<a href="https://www.scarsu.com/categories/learn" title="03方法论 | 高效学习" target="_blank">03方法论 | 高效学习</a></li>
+<li class="lks">12、<a href="https://www.scarsu.com/categories/learn" title="03成长 | 自我管理" target="_blank">03成长 | 自我管理</a></li>
 
 <li class="lks">13、<a href="https://www.scarsu.com/vue-message-plugin" title="Vue消息插件开发 &amp; npm发布" target="_blank">Vue消息插件开发 &amp; npm发布</a></li>
 
