--- a/source/asset/sitemap.html
+++ b/source/asset/sitemap.html
@@ -57,7 +57,7 @@ ul, li{margin:0px; padding:0px; list-style:none;}ul{width:800px;margin-left: aut
 
 <li class="lks">24、<a href="https://www.scarsu.com/categories/02-Debug-Devtools进阶系列" title="10技术 | 前端Debug老司机" target="_blank">10技术 | 前端Debug老司机</a></li>
 
-<li class="lks">25、<a href="https://www.scarsu.com/categories/tools" title="04工具 | 效率MAX" target="_blank">04工具 | 效率MAX</a></li>
+<li class="lks">25、<a href="https://www.scarsu.com/categories/tools" title="10技术 | 前端工具与工程化" target="_blank">10技术 | 前端工具与工程化</a></li>
 
 <li class="lks">26、<a href="https://www.scarsu.com/archives" title="📪全部文章(65)" target="_blank">📪全部文章(65)</a></li>
 
