--- a/source/asset/notion-char/index.html
+++ b/source/asset/notion-char/index.html
@@ -8,54 +8,70 @@
     <script src="./asset/dom2img.js"></script>
   </head>
   <body>
-    <div class="form">
-      <input type="text" id="inp_char" placeholder="Please enter your character"/>
-    </div>
-    <div class="icon-wrap">
-      <div id="icon-border">
-        <div class="icon-up"></div>
-        <div class="icon-front"></div>
-        <div class="icon-side"></div>
-      </div>
+    <div class="container">
+      <div class="icon-wrap">
+        <div id="icon-border">
+          <div class="icon-up"></div>
+          <div class="icon-front"></div>
+          <div class="icon-side"></div>
+        </div>
 
-      <div id="icon-padding">
-        <div class="icon-up"></div>
-        <div class="icon-front"></div>
-        <div class="icon-side"></div>
-      </div>
-      <div id="icon-face">
-        <div class="icon-up"></div>
-        <div class="icon-front">
-          <div id="char">
-            N
+        <div id="icon-padding">
+          <div class="icon-up"></div>
+          <div class="icon-front"></div>
+          <div class="icon-side"></div>
+        </div>
+        <div id="icon-face">
+          <div class="icon-up"></div>
+          <div class="icon-front">
+            <div id="char" contenteditable style="font-size:100px;line-height:100px;">N</div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="form">
-      <button id="btn">Download png</button>
+      <form class="form" id="fontForm" style="z-index: 9;">
+        <div class="row">
+          <label for="size">font-size:</label>
+          <!-- <input type="number" min="10" max="100" name="size" style="width:50px;padding:0;"/> -->
+          10<input type="range" min="10" max="100" value="100" name="size" id="fontSize">100
+        </div>
+        <div class="row">
+          <label for="height">line-height:</label>
+          <!-- <input type="number" min="10" max="100" name="height" style="width:50px;padding:0;"/> -->
+          10<input type="range" min="10" max="100" value="100" name="height" id="lineHeight">100
+        </div>
+        <div class="row">
+          <button id="btn">Download png</button>
+        </div>
+      </form>
     </div>
     <script type="text/javascript">
-      const $inp = document.querySelector('#inp_char')
-      const $char = document.querySelector('#char')
       const $btn = document.querySelector('#btn')
       const $icon = document.querySelector('.icon-wrap')
-      $inp.addEventListener('keyup', function () {
-        $char.textContent = (this.value || 'N')[0].toUpperCase()
-      })
-      $btn.addEventListener('click', function () {
+      const $char = document.querySelector('#char')
+      const $fontForm = document.querySelector('#fontForm')
+      $btn.addEventListener('click', function (e) {
+        e.preventDefault();
         window.domtoimage.toPng($icon)
           .then(function (dataUrl) {
             const img = new Image()
             img.src = dataUrl
             const link = document.createElement('a')
             link.href = dataUrl
-            link.download = `Notion${$char.textContent}.png`
+            link.download = `notion-icon.png`
             link.click()
           })
           .catch(function (error) {
             console.error('oops, something went wrong!', error)
           })
+      })
+      $fontForm.addEventListener('input', function () {
+        console.log(this)
+        const data = new FormData(this)
+        const size = data.get('size')
+        const height = data.get('height')
+        console.log({height, size})
+        $char.style.lineHeight = height + 'px'
+        $char.style.fontSize = size + 'px'
       })
     </script>
   </body>
