--- a/source/friends/index.html
+++ b/source/friends/index.html
@@ -171,6 +171,17 @@
         </div>
       </a>
 
+      <a class="card" href="http://jsding96.cn/">
+        <img
+          class="avatar nofancybox"
+          src="https://cdn.jsdelivr.net/gh/BestDingSheng/ImgHosting/Deson-PIC/20210208223244.jpeg"
+        />
+        <div>
+          <p class="name">Deson blog</p>
+          <p class="desc">2021 深度思考⇌脱离舒适区</p>
+        </div>
+      </a>
+
 
       
       <!-- <a class="card" href="">
