--- a/source/asset/sitemap.html
+++ b/source/asset/sitemap.html
@@ -93,7 +93,7 @@ ul, li{margin:0px; padding:0px; list-style:none;}ul{width:800px;margin-left: aut
 
 <li class="lks">42、<a href="https://www.scarsu.com/fed_ml_12_transfer_learning" title="ML12 基于迁移学习的图片分类-商标识别" target="_blank">ML12 基于迁移学习的图片分类-商标识别</a></li>
 
-<li class="lks">43、<a href="https://www.scarsu.com/categories/read" title="02阅读 | 我的课外书笔记" target="_blank">02阅读 | 我的课外书笔记</a></li>
+<li class="lks">43、<a href="https://www.scarsu.com/categories/read" title="02阅读 | 读书笔记" target="_blank">02阅读 | 读书笔记</a></li>
 
 <li class="lks">44、<a href="https://www.scarsu.com/nonviolent_communication" title="《非暴力沟通》：有些话真的可以好好说" target="_blank">《非暴力沟通》：有些话真的可以好好说</a></li>
 
