--- a/source/asset/sitemap.html
+++ b/source/asset/sitemap.html
@@ -23,15 +23,15 @@ ul, li{margin:0px; padding:0px; list-style:none;}ul{width:800px;margin-left: aut
 
 <li class="lks">7、<a href="https://www.scarsu.com/fed_ml_14_slider" title="ML14 声控轮播图 - 语音识别迁移学习" target="_blank">ML14 声控轮播图 - 语音识别迁移学习</a></li>
 
-<li class="lks">8、<a href="https://www.scarsu.com/categories/build-tools" title="10技术 | 前端工具与工程化" target="_blank">10技术 | 前端工具与工程化</a></li>
+<li class="lks">8、<a href="https://www.scarsu.com/categories/build-tools" title="10技术 | 前端" target="_blank">10技术 | 前端</a></li>
 
 <li class="lks">9、<a href="https://www.scarsu.com/how_to_learn_wheels_source_code" title="如何学习源码 | 如何高效学习一个新知识" target="_blank">如何学习源码 | 如何高效学习一个新知识</a></li>
 
-<li class="lks">10、<a href="https://www.scarsu.com/categories/utility-libraries" title="10技术 | 前端工具与工程化" target="_blank">10技术 | 前端工具与工程化</a></li>
+<li class="lks">10、<a href="https://www.scarsu.com/categories/utility-libraries" title="10技术 | 前端" target="_blank">10技术 | 前端</a></li>
 
 <li class="lks">11、<a href="https://www.scarsu.com/event_loop" title="【Javascript Event Loop &amp; 异步机制】总结" target="_blank">【Javascript Event Loop &amp; 异步机制】总结</a></li>
 
-<li class="lks">12、<a href="https://www.scarsu.com/categories/learn" title="03成长 | 自我管理" target="_blank">03成长 | 自我管理</a></li>
+<li class="lks">12、<a href="https://www.scarsu.com/categories/learn" title="03成长 | 认知&效率&自我管理" target="_blank">03成长 | 认知&效率&自我管理</a></li>
 
 <li class="lks">13、<a href="https://www.scarsu.com/vue-message-plugin" title="Vue消息插件开发 &amp; npm发布" target="_blank">Vue消息插件开发 &amp; npm发布</a></li>
 
@@ -39,7 +39,7 @@ ul, li{margin:0px; padding:0px; list-style:none;}ul{width:800px;margin-left: aut
 
 <li class="lks">15、<a href="https://www.scarsu.com/fed_ml_09_under&amp;overfitting" title="ML09 欠拟合&amp;过拟合" target="_blank">ML09 欠拟合&amp;过拟合</a></li>
 
-<li class="lks">16、<a href="https://www.scarsu.com/categories/javascript" title="10技术 | JavaScript" target="_blank">10技术 | JavaScript</a></li>
+<li class="lks">16、<a href="https://www.scarsu.com/categories/javascript" title="10技术 | 前端" target="_blank">10技术 | 前端</a></li>
 
 <li class="lks">17、<a href="https://www.scarsu.com/" title="ScarSu" target="_blank">ScarSu</a></li>
 
@@ -57,7 +57,7 @@ ul, li{margin:0px; padding:0px; list-style:none;}ul{width:800px;margin-left: aut
 
 <li class="lks">24、<a href="https://www.scarsu.com/categories/02-Debug-Devtools进阶系列" title="10技术 | 前端Debug老司机" target="_blank">10技术 | 前端Debug老司机</a></li>
 
-<li class="lks">25、<a href="https://www.scarsu.com/categories/tools" title="10技术 | 前端工具与工程化" target="_blank">10技术 | 前端工具与工程化</a></li>
+<li class="lks">25、<a href="https://www.scarsu.com/categories/tools" title="10技术 | 前端" target="_blank">10技术 | 前端</a></li>
 
 <li class="lks">26、<a href="https://www.scarsu.com/archives" title="📪全部文章(65)" target="_blank">📪全部文章(65)</a></li>
 
@@ -69,11 +69,11 @@ ul, li{margin:0px; padding:0px; list-style:none;}ul{width:800px;margin-left: aut
 
 <li class="lks">30、<a href="https://www.scarsu.com/page/4" title="4" target="_blank">4</a></li>
 
-<li class="lks">31、<a href="https://www.scarsu.com/categories/database" title="10技术 | 数据库" target="_blank">10技术 | 数据库</a></li>
+<li class="lks">31、<a href="https://www.scarsu.com/categories/database" title="10技术 | 前端" target="_blank">10技术 | 前端</a></li>
 
 <li class="lks">32、<a href="https://www.scarsu.com/vue_store_and_vuex" title="Vue状态管理 &amp; Vuex总结" target="_blank">Vue状态管理 &amp; Vuex总结</a></li>
 
-<li class="lks">33、<a href="https://www.scarsu.com/categories/html" title="10技术 | HTML" target="_blank">10技术 | HTML</a></li>
+<li class="lks">33、<a href="https://www.scarsu.com/categories/html" title="10技术 | 前端" target="_blank">10技术 | 前端</a></li>
 
 <li class="lks">34、<a href="https://www.scarsu.com/page/2" title="2" target="_blank">2</a></li>
 
@@ -87,7 +87,7 @@ ul, li{margin:0px; padding:0px; list-style:none;}ul{width:800px;margin-left: aut
 
 <li class="lks">39、<a href="https://www.scarsu.com/categories/ml" title="10技术 | 前端机器学习" target="_blank">10技术 | 前端机器学习</a></li>
 
-<li class="lks">40、<a href="https://www.scarsu.com/categories/css" title="10技术 | CSS" target="_blank">10技术 | CSS</a></li>
+<li class="lks">40、<a href="https://www.scarsu.com/categories/css" title="10技术 | 前端" target="_blank">10技术 | 前端</a></li>
 
 <li class="lks">41、<a href="https://www.scarsu.com/fed_ml_11_pre_training_model" title="ML11 使用预训练模型 图片分类" target="_blank">ML11 使用预训练模型 图片分类</a></li>
 
